# CV_API_C_version

./: CMakeLists.txt  README.md  requirements.txt
cmake/: linux64.cmake  venus.cmake
demo/: CMakeLists.txt  bmp.c  bmp.h  test.c  test.h
docs/: CV通用函数接口说明1.0.md
include/engine_utils/: common.h  cv_utils.h  ls_cv.dynsym
modules/: common_and_cv_utity.md
modules/YUV2RGB565/: YUV2RGB565.md  cv_cvtcolor.c  cv_cvtcolor.h  cv_cvtcolor_sim.c  srcWaveId_640x480.yuv
result_compare/: compare_with_opencv.py  compare_with_pillow.py  compare_with_torchvision.py  my_test.py
scripts/: build_csk6.sh  build_linux.sh
