CMAKE_MINIMUM_REQUIRED( VERSION 2.8 FATAL_ERROR )

# ADD_EXECTION(test ${CMAKE_CURRENT_SOURCE_DIR} ${ROOT_BIN_DIR})
# set(BEGIN_WHOLE_ARCHIVE -Wl,--whole-archive)
# set(END_WHOLE_ARCHIVE -Wl,--no-whole-archive)

# set(CPP_EXAMPLE_LIBS ${BEGIN_WHOLE_ARCHIVE} thinker m ${END_WHOLE_ARCHIVE})

# TARGET_LINK_LIBRARIES(test ${CPP_EXAMPLE_LIBS})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/deps/linux64/lib)
LINK_DIRECTORIES(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
LINK_DIRECTORIES(${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})

ADD_EXECUTABLE(ls_lib_test test.c )
IF (${VENUS})
    TARGET_LINK_LIBRARIES(ls_lib_test ls_cv luna opi_cpy dbg drv xos bsp m)
ELSE ()
    TARGET_LINK_LIBRARIES(ls_lib_test ls_cv m)
ENDIF ()
SET_TARGET_PROPERTIES(ls_lib_test PROPERTIES RUNTIME_OUTPUT_DIRECTORY  ${PROJECT_SOURCE_DIR}/bin)


